made it less jank